@@ -5,9 +5,18 @@ set -e
 case "$1" in
     remove)
         update-alternatives --remove xen-default /usr/lib/xen-@version@
+        if [ -x "/etc/init.d/xend" ]; then
+            invoke-rc.d xend stop || exit $?
+        fi
     ;;
 
-    upgrade|deconfigure|failed-upgrade)
+    upgrade)
+        if [ -x "/etc/init.d/xend" ]; then
+            invoke-rc.d xend stop || exit $?
+        fi
+    ;;
+
+    deconfigure|failed-upgrade)
     ;;
 
     *)
